bin_PROGRAMS = intraportmap

intraportmap_SOURCES = intraportmap.cpp ipm_client.cpp ipm_client_tunnel.cpp ipm_server_agent.cpp ipm_server.cpp ipm_server_tunnel.cpp main.cpp slog.cpp stdafx.cpp util.cpp crc32.cpp

intraportmap_SOURCES += intraportmap.h ipm_client.h ipm_client_tunnel.h ipm_server_agent.h ipm_server.h ipm_server_tunnel.h ipm_types.h slog.h stdafx.h util.h crc32.h

AM_CPPFLAGS = $(EVENT_CFLAGS)

intraportmap_LDADD = $(EVENT_LIBS)

